--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </article>
 
         <footer>
-            <a href="http://validator.w3.org/check/referer" title="Check the validity of this site&#8217;s HTML" class="zen-validate-html">HTML</a>
+            <a href="https://validator.w3.org/nu/check/referer" title="Check the validity of this site&#8217;s HTML" class="zen-validate-html">HTML</a>
             <a href="http://jigsaw.w3.org/css-validator/check/referer" title="Check the validity of this site&#8217;s CSS" class="zen-validate-css">CSS</a>
         </footer>
 
@@ -70,7 +70,7 @@
                 <h3 class="resources">Resources:</h3>
                 <ul>
                     <li class="view-css">
-                        <a href="/214/214.css" title="View the source CSS file of the currently-viewed design.">
+                        <a href="https://github.com/Pjmcnally/mini_css_zen_garden/blob/master/zen_mockup.css" title="View the source CSS file of the currently-viewed design.">
                             View This Design&#8217;s <abbr title="Cascading Style Sheets">CSS</abbr>                        </a>
                     </li>
                     <li class="css-resources">
