--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <footer>
             <a href="https://validator.w3.org/nu/check/referer" title="Check the validity of this site&#8217;s HTML" class="zen-validate-html">HTML</a>
-            <a href="http://jigsaw.w3.org/css-validator/check/referer?profile=css3" title="Check the validity of this site&#8217;s CSS" class="zen-validate-css">CSS</a>
+            <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://pjmcnally.github.io/mini_css_zen_garden/&profile=css3" title="Check the validity of this site&#8217;s CSS" class="zen-validate-css">CSS</a>
         </footer>
 
     </main>
