Add image link to footer.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
             <a href="https://validator.w3.org/nu/check/referer" title="Check the validity of this site&#8217;s HTML" class="zen-validate-html">HTML</a>
             <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://pjmcnally.github.io/mini_css_zen_garden/&profile=css3" title="Check the validity of this site&#8217;s CSS" class="zen-validate-css">CSS</a>
             <a href="https://github.com/Pjmcnally/mini_css_zen_garden" title="Project Repo" class="zen-validate-css">Repo</a>
-        </footer>
+            <a href="https://github.com/Pjmcnally/mini_css_zen_garden/blob/master/mini_zen_css.png" title="Original Image" class="zen-validate-css">Image</a>
+        </footer> 
 
     </main>
 
