--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <h3 class="resources">Resources:</h3>
                 <ul>
                     <li class="view-css">
-                        <a href="https://github.com/Pjmcnally/mini_css_zen_garden/blob/master/zen_mockup.css" title="View the source CSS file of the currently-viewed design.">
+                        <a href="https://raw.githubusercontent.com/Pjmcnally/mini_css_zen_garden/master/zen_mockup.css" title="View the source CSS file of the currently-viewed design.">
                             View This Design&#8217;s <abbr title="Cascading Style Sheets">CSS</abbr>                        </a>
                     </li>
                     <li class="css-resources">
